<resources>
    <string name="app_name">HttpTest2</string>
    <string name="snils">Ваш снилс</string>
    <string name="password">Пароль</string>
    <string name="btn_input">Войти</string>
    <string name="snils_hint">XXX-XXX-XXX XX</string>
    <string name="format_snils">В формате 123-456-789 01:</string>
    <string name="snils_format_error">Контрольное число СНИЛС ошибочно!</string>
    <string name="title_table">Ваши заявки</string>
    <string name="add_file">добавить файлы</string>
    <string name="btn_regist">регистрация</string>

    <string name="agreement">Регистрация\nСогласие на обработку персональных данных</string>
    <string name="agree_check_text">Согласен на обработку персональных данных</string>
    <string name="resume_reg">продолжить регистрацию</string>
    <string name="back">назад к авторизации</string>
    <string-array name="type_subject">
        <item>Физическое лицо</item>
        <item>Юридическое лицо</item>
    </string-array>
     <string name="agree_for_registration">Согласен на обработку своих персональных данных в соответствии с Федеральным законом РФ от 27.07.2006 г. №152-ФЗ «О персональных данных».
Предоставляя АО «Дальневосточная распределительная сетевая компания» (далее – АО «ДРСК») свои персональные данные, Вы выражаете согласие на обработку (сбор, накопление, хранение, уточнение, использование, передачу, блокирование, уничтожение, в том числе по открытым каналам связи посредством информационно-телекоммуникационной сети «Интернет») своих персональных данных в целях информационного взаимодействия по вопросам оказания услуг по технологическому присоединению к электросетям.
АО «ДРСК» не раскрывает Ваши персональные данные третьим лицам и предпринимает все необходимые меры по обеспечению безопасности персональных данных от несанкционированного доступа, изменения, раскрытия или уничтожения.
Вы несете ответственность за предоставление нам достоверных сведений, а также за обновление предоставленных данных в случае каких-либо изменений.
В случаях, если Вы хотите узнать, какие именно Ваши персональные данные обрабатывает АО «ДРСК», либо дополнить, исправить или удалить любые неполные, неточные или устаревшие персональные данные, Вы можете в соответствии со статьей 14 Федерального закона от 27.07.2006 г. №152-ФЗ «О персональных данных» реализовать такое право, обратившись в АО «ДРСК» по адресу, указанному в разделе cайта «Контакты».
Продолжая оставаться на сайте и заполняя регистрационную форму, Вы подтверждаете своё согласие на передачу и обработку информации в электронном виде, в том числе по открытым каналам связи посредством информационно-телекоммуникационной сети «Интернет», а также подтверждаете, что ознакомлены с положениями Федерального закона от 27.07.2006 № 152-ФЗ «О персональных данных», права и обязанности в области защиты персональных данных Вам ясны.
    </string>
    <string name="our_snils">Ваш снилс*</string>
    <string name="reg_pass">Пароль*</string>
    <string name="replay_pass">Повторите пароль*</string>
    <string name="seria_number_pasport">Серия / номер паспорта(без пробела)*</string>
    <string name="date_passport">дата выдачи паспорта*</string>
    <string name="where_get_passport">Орган, выдавший паспорт*</string>
    <string name="reg_last_name">фамилия*</string>
    <string name="reg_first_name">имя*</string>
    <string name="reg_father">отечество*</string>
    <string name="reg_birthday">день рождения*</string>
    <string name="reg_email">Email*</string>
    <string name="reg_index_pochta">Ваш почтовый индекс*</string>
    <string name="reg_place_life">Регион проживания*</string>
    <string name="reg_life_raion">Район проживания</string>
    <string name="reg_city_life">Город/населенный пункт проживания*</string>
    <string name="reg_street">Улица/микрорайон**</string>
    <string name="reg_house">Дом/владение*</string>
    <string name="reg_korpus">Корпус/Строение</string>
    <string name="reg_appartment">Квартира</string>
    <string name="reg_phone_number">Телефон</string>
    <string name="load_documents">загрузить документы</string>
    <string name="folder_empty">Папка пуста</string>
    <string name="our_inn">ваш ИНН*</string>
    <string name="inn">ИНН</string>
    <string name="our_ogrn">ОГРН из ЕГРЮЛ*</string>
    <string name="name_organiz">Название организации*</string>
    <string name="po4t_index_org">Почтовый индекс организации</string>
    <string name="region_org">Регион нахождения оргинизации*</string>
    <string name="region_org_help">Укажите край или область регистрации Указанный регион будет использован как часть адреса для отправки пакета документов по ТП</string>
    <string name="city_org">Город/населенный пункт нахождения организации*</string>
    <string name="street_org">Улица/микрорайон нахождения организации*</string>
    <string name="house_org">Дом/владение нахождения организации*</string>
    <string name="korpus_org">Корпус/Строение нахождения организации</string>
    <string name="appartment_org">Квартира/офис нахождения организации</string>
    <string name="reg_phone_number_help">Укажите при желании номер телефона  Указанный телефон может быть использован специалистами АО ДРСК для связи с Вами, что позволит значительно ускорить обработку и исполнение заявок</string>
    <string name="raion_org">Укажите район города или региона, если присутствует деление на районы</string>
    <string name="raion">Район организации</string>
    <string name="ogrn_corp">ОГРН из ЕГРЮЛ</string>
    <string name="name_obj">Наименование объекта: </string>
    <string name="date_app">Дата подачи заявки: </string>
    <string name="address">Адрес присоединения \nобъекта :</string>
    <string name="status">Статус заявки: </string>
    <string name="type">Тип технологического \nприсоединения: </string>
    <string name="our_comment">Ваш комментарий \nк заявке: </string>
    <string name="power">Запрашиваемая \nмощность кВт: </string>
    <string name="voltage">Напряжение, кВ: </string>
    <string name="new_app">Новая заявка</string>
</resources>
