<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp">

    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agreement"
        android:textColor="@color/black"
        android:textSize="13sp"
        android:layout_marginBottom="5dp"/>
    <TextView
        android:id="@+id/agree_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agree_for_registration"
        android:textSize="10sp"
        android:textColor="@color/black"/>

    <CheckBox
        android:id="@+id/check_agree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agree_check_text"
        android:layout_marginLeft="5dp"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">
    <Button
        android:id="@+id/btn_resume_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resume_reg"
        android:textSize="10sp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textColor="@drawable/btn_agree_text_color"
        android:background="@drawable/btn_agree_back"
        android:layout_marginBottom="2dp"/>
    <Button
        android:id="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textSize="10sp"
        android:background="@color/colorPrimary"
        android:layout_marginLeft="5dp"
        android:textColor="@color/white"
        android:layout_marginRight="5dp"
        />

    </LinearLayout>

</LinearLayout>