<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
    android:text="@string/our_inn"
    android:textSize="10sp"
    android:layout_marginLeft="5dp"
    android:textColor="@color/colorPrimary"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/reg_inn_corp"
        android:layout_width="match_parent"
        android:hint="@string/our_inn"
        android:gravity="center"
        android:inputType="number"
        android:maxLength="10"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content"
        />
    <TextView
        android:text="@string/our_ogrn"
        android:textSize="10sp"
        android:layout_marginLeft="5dp"
        android:textColor="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:layout_width="match_parent"
        android:id="@+id/reg_ogrn"
        android:hint="@string/our_ogrn"
        android:gravity="center"
        android:inputType="number"
        android:maxLength="15"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content"
        />

    <TextView
        android:text="@string/password"
        android:textSize="10sp"
        android:layout_marginLeft="5dp"
        android:textColor="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/reg_pass_corp"
        android:hint="@string/password"
        android:gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        />
    <EditText
        android:id="@+id/reg_pass_repl_corp"
        android:layout_width="match_parent"
        android:hint="@string/replay_pass"
        android:gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content"
        />
    <TextView
        android:text="@string/name_organiz"
        android:textSize="10sp"
        android:layout_marginLeft="5dp"
        android:textColor="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/reg_name_org_corp"
        android:layout_width="match_parent"
        android:hint="@string/name_organiz"
        android:gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content"
        />
    <TextView
        android:text="@string/reg_email"
        android:textSize="10sp"
        android:layout_marginLeft="5dp"
        android:textColor="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/reg_email_corp"
        android:layout_width="match_parent"
        android:hint="@string/reg_email"
        android:gravity="center"
        android:inputType="textEmailAddress"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content"
        />
    <TextView
        android:text="@string/po4t_index_org"
        android:textSize="10sp"
        android:layout_marginLeft="5dp"
        android:textColor="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/reg_pocht_corp"
        android:layout_width="match_parent"
        android:hint="@string/po4t_index_org"
        android:gravity="center"
        android:inputType="number"
        android:maxLength="6"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content"
        />
    <TextView
        android:text="@string/region_org"
        android:textSize="10sp"
        android:layout_marginLeft="5dp"
        android:textColor="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/reg_region_org_corp"
        android:layout_width="match_parent"
        android:hint="@string/region_org"
        android:gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content"
        />
    <TextView
        android:text="@string/region_org_help"
        android:layout_gravity="center"
        android:textSize="10sp"
        android:gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/city_org"
        android:textSize="10sp"
        android:layout_marginLeft="5dp"
        android:textColor="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/reg_city_org"
        android:layout_width="match_parent"
        android:hint="@string/city_org"
        android:gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content"
        />
    <TextView
        android:text="@string/street_org"
        android:textSize="10sp"
        android:layout_marginLeft="5dp"
        android:textColor="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/reg_street_org"
        android:layout_width="match_parent"
        android:hint="@string/street_org"
        android:gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content"
        />
    <TextView
        android:text="@string/house_org"
        android:textSize="10sp"
        android:layout_marginLeft="5dp"
        android:textColor="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/reg_house_org"
        android:layout_width="match_parent"
        android:hint="@string/house_org"
        android:gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content"
        />
    <TextView
        android:text="@string/korpus_org"
        android:textSize="10sp"
        android:layout_marginLeft="5dp"
        android:textColor="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/reg_korpus_org"
        android:layout_width="match_parent"
        android:hint="@string/korpus_org"
        android:gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content"
        />
    <TextView
        android:text="@string/appartment_org"
        android:textSize="10sp"
        android:layout_marginLeft="5dp"
        android:textColor="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/reg_appartment_org"
        android:layout_width="match_parent"
        android:hint="@string/korpus_org"
        android:gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content"
        />
    <TextView
        android:text="@string/reg_phone_number"
        android:textSize="10sp"
        android:layout_marginLeft="5dp"
        android:textColor="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/reg_phone_org"
        android:layout_width="match_parent"
        android:hint="@string/reg_phone_number"
        android:gravity="center"
        android:inputType="phone"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content"
        />
    <TextView
        android:text="@string/reg_phone_number_help"
        android:textSize="10sp"
        android:layout_marginLeft="5dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_reg_corp"
        android:gravity="center"
        android:background="@color/colorPrimary"
        android:text="@string/btn_regist"
        android:layout_margin="10dp"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>