<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/inn"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/inn_corp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_margin="10dp"
        android:padding="5dp"
        android:maxLength="10"
        android:background="@drawable/corner_edit_main"/>

    <TextView
        android:text="@string/ogrn_corp"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/ogrn_corp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_margin="10dp"
        android:padding="5dp"
        android:maxLength="13"
        android:background="@drawable/corner_edit_main"/>

    <TextView
        android:text="@string/password"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/password_corp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="5dp"
        android:background="@drawable/corner_edit_main"/>
    <Button
        android:id="@+id/auth_corp_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/btn_input"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"/>

</LinearLayout>